// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-vibe-audience destination: sync action - all fields 1`] = `
Object {
  "addProfiles": Array [],
  "audienceId": "$pW1NOveGf$",
  "audienceName": "$pW1NOveGf$",
  "removeProfiles": Array [
    Object {
      "email": "wawe@diuvla.ug",
      "profileDetails": Object {
        "first_name": "$pW1NOveGf$",
        "last_name": "$pW1NOveGf$",
        "phone": "$pW1NOveGf$",
      },
    },
  ],
}
`;

exports[`Testing snapshot for actions-vibe-audience destination: sync action - required fields 1`] = `
Object {
  "addProfiles": Array [],
  "audienceId": "$pW1NOveGf$",
  "audienceName": "$pW1NOveGf$",
  "removeProfiles": Array [
    Object {
      "email": "wawe@diuvla.ug",
    },
  ],
}
`;
